--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,17 @@
     <div class="col-xs-12">
       <h3>I'm in the App Component!</h3>
       <hr>
-      <app-servers></app-servers>
+      <ol>
+        <li>Create two new Components (manually or with CLI): warningAlert and SuccessAlert</li>
+        <li>Output them beneath each other in the AppComponent</li>
+        <li>Output a warning or success message in the Components</li>
+        <li>Style the Components appropriately (maybe some red/green text?)</li>
+      </ol>
+      <p>Use external and internal templates and styles</p>
+      <p>Feel free to create more components, nest them into each other or play around with different types of selectors:</p>
+      <hr>
+      <app-success-alert></app-success-alert>
+      <app-warning-alert></app-warning-alert>
     </div>
   </div>
 </div>
