--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,18 @@
     <div class="col-xs-12">
       <h3>I'm in the App Component!</h3>
       <hr>
-      <app-servers></app-servers>
+<!--      <app-servers></app-servers>-->
+      <ol>
+        <li>Add a Input field which updates a property ('username') via Two-Way-Binding</li>
+        <li>Output the username property via String Interpolation (in a paragraph below the input)</li>
+        <li>Add a button which may only be clicked if the username is NOT an empty string</li>
+        <li>Upon clicking the button, the username should be reset to an empty string</li>
+      </ol>
+
+      <input type="text" class="form-control" [(ngModel)]="username">
+      <p>{{ username }}</p>
+      <button class="btn btn-primary" [disabled]="isEmptyUsername()" (click)="emptyUser()">Add a User</button>
+
     </div>
   </div>
 </div>
