--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,8 +1,11 @@
 <label>Server Name</label>
 <input type="text" class="form-control" (input)="onUpdateServer($event)">
 <input type="text" class="form-control" [(ngModel)]="serverName">
-<p>{{ serverName }}</p>
+<!-- if block -->
+<p *ngIf="isCreated; else noServer">Server is created with the name {{ serverName }} .</p>
+<!-- else block -->
+<ng-template #noServer>
+  <p>No Server is created.</p></ng-template>
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()" >Add Server</button>
 <p>{{ serverCreationStatus }}</p>
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of allServers"></app-server>
