--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
 <div class="container">
+  <app-cockpit></app-cockpit>
   <div class="row">
     <div class="col-xs-12">
-      <h3>I'm in the App Component!</h3>
-      <hr>
-      <app-servers></app-servers>
+      <app-server-element *ngFor="let serverElement of serverElements" [element]="serverElement"></app-server-element>
     </div>
   </div>
 </div>
-
