--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,7 @@
       <app-server-element *ngFor="let serverElement of serverElements" [srvElement]="serverElement"></app-server-element>
     </div>
   </div>
+  <p appBasicHighlight>Style me with basic directive</p>
+  <p appBetterHighlight>Style me with better directive</p>
+
 </div>
