--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,6 @@
     </div>
   </div>
   <p appBasicHighlight>Style me with basic directive</p>
-  <p appBetterHighlight>Style me with better directive</p>
+  <p appBetterHighlight [defaultColor]="'yellow'" [highlightColor]="'red'"  >Style me with better directive</p>
 
 </div>
