--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,6 @@
   </div>
   <p appBasicHighlight>Style me with basic directive</p>
   <p appBetterHighlight [defaultColor]="'yellow'" [highlightColor]="'red'"  >Style me with better directive</p>
+  <!-- *ngIf === <ng-template [ngIf]></ng-template> -->
 
 </div>
