--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,5 +11,6 @@
   <p appBasicHighlight>Style me with basic directive</p>
   <p appBetterHighlight [defaultColor]="'yellow'" [highlightColor]="'red'"  >Style me with better directive</p>
   <!-- *ngIf === <ng-template [ngIf]></ng-template> -->
+  <div *appUnless="serverFlag">Hi I am true!</div>
 
 </div>
